...
                        <connections>
                            <outlet property="dataSource" destination="fRW-bz-Bk0" id="LYn-we-rxX"/>
                            <outlet property="delegate" destination="fRW-bz-Bk0" id="tHF-Th-YSS"/>
                        </connections>
                    </tableView>
                    <toolbarItems>
                        <barButtonItem title="Done" id="tp7-bF-ZEf">
                            <connections>
                                <action selector="finishShopping" destination="fRW-bz-Bk0" id="pVG-K8-X2d"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem width="244" style="plain" systemItem="fixedSpace" id="Ahp-ze-jx6"/>
                        <barButtonItem title="Item" image="mic.fill" catalog="system" id="4JJ-h2-Xag">
                            <connections>
                                <action selector="addItemVoice:" destination="fRW-bz-Bk0" id="bBh-Yj-j1x"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem width="20" style="plain" systemItem="fixedSpace" id="obT-Rl-bUr"/>
                        <barButtonItem title="Item" image="plus" catalog="system" id="0PU-XT-wcE">
...
            <objects>
                <viewController id="NBI-PU-Kym" customClass="AddItemViewController" customModule="Grocery_List" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="lIu-2v-Ni5">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Item Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BIY-PZ-8iA">
                                <rect key="frame" x="23.5" y="133" width="370.5" height="34"/>
                                <color key="backgroundColor" red="0.1215666011" green="0.12156755480000001" blue="0.1215701029" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <color key="tintColor" red="0.32586547729999998" green="0.64543908829999996" blue="0.38819706440000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
...
                            <constraint firstItem="ieb-Nt-e5c" firstAttribute="leading" secondItem="aUl-FK-UGA" secondAttribute="trailing" constant="-128" id="t1I-H1-Ub9"/>
                            <constraint firstItem="hgn-ph-bAK" firstAttribute="top" secondItem="ieb-Nt-e5c" secondAttribute="bottom" constant="8" symbolic="YES" id="yYt-C2-5ub"/>
                            <constraint firstItem="ieb-Nt-e5c" firstAttribute="top" secondItem="aUl-FK-UGA" secondAttribute="bottom" constant="-23.5" id="yfG-ug-wtd"/>
                        </constraints>
                    </view>
                    <toolbarItems>
                        <barButtonItem title="Add Item" width="434" id="CZq-f4-McN">
                            <color key="tintColor" red="0.95502287149999998" green="0.20447647569999999" blue="0.43530109519999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                            <connections>
                                <action selector="addItem:" destination="NBI-PU-Kym" id="01a-6s-qoY"/>
                            </connections>
                        </barButtonItem>
                    </toolbarItems>
...
            </objects>
            <point key="canvasLocation" x="2669.5652173913045" y="-273.21428571428572"/>
        </scene>
        <!--Stores-->
        <scene sceneID="2tH-LI-JFo">
            <objects>
                <tableViewController title="Stores" id="3Et-EM-gYM" customClass="StoresTableViewController" customModule="Grocery_List" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="owc-Mn-aau">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" red="0.058822199700000001" green="0.058822855350000001" blue="0.05882447213" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                        <color key="tintColor" red="0.95502287149999998" green="0.20447647569999999" blue="0.43530109519999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                        <color key="sectionIndexBackgroundColor" red="0.054900787770000001" green="0.058868952099999997" blue="0.0549023971" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
...
