...
            page.descriptionText = "Are you sure?"
        }
        else {
            page.descriptionText = "Your list still has \(store.getNumNonDoneItems()) items left"
        }
        
        page.actionButtonTitle = "Yes"
        page.alternativeButtonTitle = "Cancel"
        
        page.isDismissable = true
        
        page.actionHandler = { item in
            self.store.finishShopping()
...
    }
    
    override func tableView(_ tableView: UITableView, trailingSwipeActionsConfigurationForRowAt indexPath: IndexPath) -> UISwipeActionsConfiguration? {
        
        let item = store.categories[indexPath.section].items[indexPath.row]
        
        let delete = UIContextualAction(style: .normal, title: "Delete") { [self] (action, view, completion) in
            if item.isFavorite == false {
                //delete the data from the thing and make it persist
                self.store.categories[indexPath[0]].items.remove(at: indexPath[1])
                tableView.beginUpdates()
                tableView.deleteRows(at: [indexPath], with: .fade)
                tableView.endUpdates()
...
